# utilities

./: ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  __init__.py  conftest.py  pyproject.toml  requirements.txt
classes/: archive.py  aws.py  bucket.py  callback.py  cloud.py  dir.py  file.py  object.py  path.py  rawimage.py  s3.py  s3_v1.py  tave.py
classes/abstract/: bucket.py  bucketitem.py  cloud.py  path.py
classes/file/: archive.py  rawimage.py
classes/path/: dir.py  file.py
clients/archive/: client.py
clients/aws/: client.py  object.py  s3.py
clients/tave/: client.py
scripts/: archive_script.py  helpers.py
tests/: test_abstract.py  test_archive.py  test_archive_callback.py  test_aws.py  test_clients_tave.py  test_path.py  test_rawimage.py
utilities/: raw_archive.py
