[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctp-utilities"
version = "0.2.1"
description = "Cloud-provider-agnostic file and storage abstractions for Capturing Time Photography"
authors = [{ name = "Ian Price", email = "ian@capturingtimephoto.net" }]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "imageio>=2.25.0",
    "py7zr>=0.20.0",
    "rawpy>=0.18.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "yaspin>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.setuptools]
include-package-data = true
packages = [
    "utilities",
    "utilities.classes",
    "utilities.classes.abstract",
    "utilities.classes.file",
    "utilities.classes.path",
    "utilities.clients",
    "utilities.clients.archive",
    "utilities.clients.aws",
    "utilities.clients.tave",
    "utilities.tests",
]
package-dir = { "utilities" = "." }

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
